file name changed

--- a/src/TestSalamaWebSocket/webapp/test.html
+++ b/src/TestSalamaWebSocket/webapp/test.html
@@ -9,7 +9,7 @@
     <title>测试</title>
 
     <script src='jslib/jquery-1.9.1.min.js'></script>
-    <script src='myjslib/SalamaWebSocket.js' ></script>
+    <script src='myjslib/salamaWebSocket.js' ></script>
 
 
     <script>
